# watchwah

./: .gitignore  Cargo.toml
app/: Cargo.toml
app/src/: audio_manager.rs  client_config.rs  client_ws.rs  detection.rs  egui.rs  main.rs
app/src/detection/: x11.rs
app/src/egui/: centerer.rs  create_timer_widget.rs  duration_input_widget.rs  helpers.rs  timer_widget.rs  top_panel.rs
cli/: Cargo.toml
cli/src/: main.rs
common/: Cargo.toml
common/src/: config.rs  lib.rs  profile.rs  timer.rs  ws_common.rs
extension/: package.json
extension/src/: background.ts  manifest.json
server/: Cargo.toml
server/src/: main.rs  server_config.rs  server_ws.rs  timer_logic.rs
src/: app.rs  daemon.rs  main.rs
src/app/: blocking.rs  client_config.rs  client_ws.rs  egui.rs  egui_app.rs  websocket.rs
src/app/blocking/: x11.rs
src/app/egui/: create_timer_widget.rs  duration_widget.rs  timer_widget.rs  top_panel.rs
src/common/: config.rs  profile.rs  timer.rs  timer_state.rs  ws_common.rs
src/daemon/: config_logic.rs  config_service.rs  profile_service.rs  server_config.rs  server_ws.rs  timer_logic.rs  timer_service.rs
