[package]
name = "watchwah"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
eframe = "0.20.1"
serde = { version = "1.0.152", features = ["derive"] }
toml = "0.7.0"
daemonize = "0.4.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tokio = { version = "1.24.1", features = ["full"] }
websockets = "0.3.0"
serde_json = "1.0.91"
anyhow = "1.0.68"
axum = { version = "0.6.2", features= ["ws", "macros", "http2"] }
notify = { version = "5.0.0", de3fault-features = false }