[package]
name = "watchwah"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_with = { version = "2.2.0", features = ["chrono_0_4", "json"] }
serde_json = "1.0.91"
toml = "0.7.0"

tokio = { version = "1.24.1", features = ["full", "tracing"] }
tokio-util = "0.7.4"
futures = "0.3.26"
console-subscriber = "0.1.8"

tracing = "0.1.37"
tracing-subscriber = "0.3.16"

eframe = "0.21.0"
egui_extras = "0.21.0"
egui-toast = "0.6.0"

x11rb = { version = "0.11.1", features = ["all-extensions"] } # todo: restrict the number of features
procfs = "0.15.1"
notify-rust = "4.8.0"

regex = "1.7.3"
pathpatterns = "0.1.2"

axum = { version = "0.6.2", features = ["ws", "macros", "http2"] }
websockets = "0.3.0"

clap = { version = "4.0.32", features = ["derive"] }
anyhow = "1.0.68"
notify = { version = "5.0.0", default-features = false }
chrono = { version = "0.4.23", features = ["serde"] }
daemonize = "0.5.0"