[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }

serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
toml = "0.7.0"

tokio = { version = "1.24.1", features = ["full", "tracing"] }
tokio-util = "0.7.4"
futures = "0.3.26"

tracing = "0.1.37"

eframe = { version = "0.21.0", features = ["dark-light"] }
egui_extras = "0.21.0"
egui-toast = "0.6.0"
catppuccin-egui = "2.0.1"

rodio = "0.17.1"

x11rb = { version = "0.11.1", features = ["composite"] }
procfs = "0.15.1"
notify-rust = "4.8.0"

regex = "1.7.3"
pathpatterns = "0.1.2"

websockets = "0.3.0"

anyhow = "1.0.68"
notify = { version = "5.0.0", default-features = false }
chrono = { version = "0.4.23", features = ["serde"] }