[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_with = { version = "2.2.0", features = ["chrono_0_4", "json"] }

tracing = "0.1.37"
tracing-subscriber = "0.3.16"
console-subscriber = "0.1.8"

chrono = { version = "0.4.23", features = ["serde"] }