[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
toml = "0.7.0"

tokio = { version = "1.24.1", features = ["full", "tracing"] }
tokio-util = "0.7.4"
futures = "0.3.26"

tracing = "0.1.37"

axum = { version = "0.6.2", features = ["ws", "macros", "http2"] }

anyhow = "1.0.68"
notify = { version = "5.0.0", default-features = false }
chrono = { version = "0.4.23", features = ["serde"] }